// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogBoxInspectorStackFrame should render collapsed stack frame with dimmed text 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "paddingHorizontal": 15,
    }
  }
>
  <LogBoxButton
    backgroundColor={
      Object {
        "default": "transparent",
        "pressed": "rgba(51, 51, 51, 1)",
      }
    }
    onPress={[Function]}
    style={
      Object {
        "borderRadius": 5,
        "flex": 1,
        "paddingHorizontal": 10,
        "paddingVertical": 4,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "Menlo",
            "fontSize": 14,
            "fontWeight": "400",
            "includeFontPadding": false,
            "lineHeight": 18,
          },
          Object {
            "color": "rgba(255, 255, 255, 0.4)",
            "fontWeight": "300",
          },
        ]
      }
    >
      foo
    </Text>
    <Text
      ellipsizeMode="middle"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgba(255, 255, 255, 0.8)",
            "fontSize": 12,
            "fontWeight": "300",
            "includeFontPadding": false,
            "lineHeight": 16,
            "paddingLeft": 10,
          },
          Object {
            "color": "rgba(255, 255, 255, 0.4)",
            "fontWeight": "300",
          },
        ]
      }
    >
      app.js:1:2
    </Text>
  </LogBoxButton>
</View>
`;

exports[`LogBoxInspectorStackFrame should render stack frame 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "paddingHorizontal": 15,
    }
  }
>
  <LogBoxButton
    backgroundColor={
      Object {
        "default": "transparent",
        "pressed": "rgba(51, 51, 51, 1)",
      }
    }
    onPress={[Function]}
    style={
      Object {
        "borderRadius": 5,
        "flex": 1,
        "paddingHorizontal": 10,
        "paddingVertical": 4,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "Menlo",
            "fontSize": 14,
            "fontWeight": "400",
            "includeFontPadding": false,
            "lineHeight": 18,
          },
          false,
        ]
      }
    >
      foo
    </Text>
    <Text
      ellipsizeMode="middle"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgba(255, 255, 255, 0.8)",
            "fontSize": 12,
            "fontWeight": "300",
            "includeFontPadding": false,
            "lineHeight": 16,
            "paddingLeft": 10,
          },
          false,
        ]
      }
    >
      app.js:1:2
    </Text>
  </LogBoxButton>
</View>
`;

exports[`LogBoxInspectorStackFrame should render stack frame without press feedback 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "paddingHorizontal": 15,
    }
  }
>
  <LogBoxButton
    backgroundColor={
      Object {
        "default": "transparent",
        "pressed": "transparent",
      }
    }
    style={
      Object {
        "borderRadius": 5,
        "flex": 1,
        "paddingHorizontal": 10,
        "paddingVertical": 4,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "Menlo",
            "fontSize": 14,
            "fontWeight": "400",
            "includeFontPadding": false,
            "lineHeight": 18,
          },
          false,
        ]
      }
    >
      foo
    </Text>
    <Text
      ellipsizeMode="middle"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgba(255, 255, 255, 0.8)",
            "fontSize": 12,
            "fontWeight": "300",
            "includeFontPadding": false,
            "lineHeight": 16,
            "paddingLeft": 10,
          },
          false,
        ]
      }
    >
      app.js:1:2
    </Text>
  </LogBoxButton>
</View>
`;
